# ssu-announcement

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  init_local_database.sh  init_local_sqs.sh  samconfig.toml  template.yaml
.github/workflows/: eventworker_workflow.yml  notifier.yml  notifier_workflow.yml  scraper_workflow.yml  workflow.yml
api/: app.py  go.mod  handler.py  pyproject.toml  requirements.txt
api/cmd/api/: main.go
api/config/: application_config.go
api/controller/: healthcheck.py  subscribe.py
api/internal/handler/: get_subscribes.go
api/internal/repository/: subscriber_repository.go
api/repository/: subscription_repository.py
api/templates/: template.py  unsubscribe_error.html  unsubscribe_success.html
api/tests/: controller_tests.py  repository_tests.py
api/utils/: error.py  response.py  token.py
cmd/ssu-announcement-notifier/: main.go
cmd/ssu-announcement-scraper/: main.go
config/: application_config.go
eventworker/: Dockerfile  go.mod  go.sum
eventworker/cmd/eventworker/: main.go  main_test.go
eventworker/config/: application_config.go
eventworker/internal/dto/: message.go
eventworker/internal/service/: send_message.go
internal/dto/: announcement_scraped_result.go
internal/repository/: save_scraped_data.go
internal/scraper/: ssu_announcement_scraper.go
internal/service/ssu_announcement_parser/: html_parser.go
notifier/: Dockerfile  go.mod  go.sum
notifier/config/: application_config.go
scraper/: Dockerfile  go.mod  go.sum
scraper/config/: application_config.go
(+22 files in other folders)
